# kraken

./: .gitignore  Cargo.toml  build.rs  kernel  makefile  output.txt  table.dtb
.github/workflows/: ci.yml
libs/mem/: Cargo.toml
libs/mem/src/: lib.rs  slab.rs
libs/mem/src/vmem/: mod.rs  segment_list.rs
libs/mem/src/vmem/segment_queue/: allocation_table.rs  freelists.rs  mod.rs
libs/system/: Cargo.toml
libs/system/src/: alloc.rs  backend.rs  lib.rs
libs/system/src/backend/: userspace.rs
libs/system/src/cpus/: mod.rs
libs/system/src/sync/: mod.rs
src/: macros.rs  main.rs
src/arch/: mod.rs
src/arch/init/: aarch64_linux.rs  mod.rs
src/arch/init/aarch64_linux/: init.s  linker.ld  mod.rs  target.json
src/arch/interrupts/: mod.rs
src/arch/paging/: aarch64.rs  mod.rs
src/arch/util/: aarch64.rs  mod.rs
src/common/: mod.rs  sizes.rs  sync.rs
src/common/elf64/: dynamic.rs
src/drivers/: mod.rs
src/drivers/serial/: mod.rs  pl011.rs
src/kernel/: memory.rs  mod.rs
src/kernel/memory/: address.rs  mod.rs  physalloc.rs
src/macros/: mod.rs
